tests/miniJava/neg/006912_mutation.MiniJava
System.out.println class java { public static void Main ( String [ ] java ) { { } } }
